--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,36 +1,59 @@
-.reservation__btn {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+@use '../util/' as u;
+
+.btn {
+    font-family: u.$font-roboto;
+    font-size: 1em;
+}
+
+.reservez__btn {
+    display: inline-block;
+    background: linear-gradient(193.33deg, var(--btn-light-purple) -11.44%, var(--btn-dark-purple) 123.93%);
+    color: var(--white-color);
+    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
     border-radius: 25px;
-    width: 218px;
-    height: 50px;
+    padding: 13px 18.75px;
+    &:hover {
+        background: linear-gradient(193.33deg, var(--btn-dark-purple) -11.44%, var(--btn-light-purple) 123.93%);
+    }
+    &:active {
+        position:relative;
+        top:1px;
+    }
 }
 
 .fonctionnement__btn {
     display: flex;
     align-items: center;
     position: relative;
+    background-color: var(--background-color);
+    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
     width: 322.49px;
     height: 72.38px;
     border-radius: 20px;
     &__numberBox {
+        background-color: var(--btn-dark-purple);
         position: absolute;
         left: -12px;
         height: 24px;
         width: 24px;
         border-radius: 12px;
         &--number {
+            font-size: 0.886em;
+            color: var(--background-color);
             position: absolute;
             top: 5.09px;
             left: 8px;
         }
     }
     &__logo {
+        color: var(--btn-icone-grey);
         position: absolute;
         left: 33.5px;
     }
     &__text {
         margin-left: 74px;
+    }
+    & .fa-store {
+        color: var(--btn-dark-purple);
     }
 }
