--- a/scss/base/_boilerplate.scss
+++ b/scss/base/_boilerplate.scss
@@ -21,9 +21,9 @@ body  {
     
 }
 
-.main-wrapper {
+/* .main-wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
-}
+} */
