--- a/scss/layout/_fonctionnement.scss
+++ b/scss/layout/_fonctionnement.scss
@@ -2,20 +2,18 @@
    display: flex;
    flex-direction: column;
    align-items: center;
-   width: 100%;
    &__wrap {
-       display: flex;
-       flex-direction: column;
        width: 375px;
        height: 440px;
        &--title {
         margin: 48px 80px 26px 20px;
        }
+       &--box {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 25px;
+        margin-left: 12px;
+       }
    }
-}
-.btn__box {
- display: flex;
- flex-direction: column;
- align-items: center;
- gap: 25px;
 }
