--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,9 +1,3 @@
- footer {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
-
 .footer {
     display: flex;
     flex-direction: column;
@@ -15,7 +9,11 @@
         gap: 7px;
         &--item {
             display: flex;
-            align-items: center; 
+            align-items: center;
+            list-style: none; 
+        }
+        & .strong {
+            font-weight: 500;
         }
     }
 }
