--- a/scss/layout/_reservez.scss
+++ b/scss/layout/_reservez.scss
@@ -1,14 +1,13 @@
-.reservation {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.reservez {
     text-align: center;
-    width: 100%;
     &__title {
         margin: 39.5px 58px 0 42px;
+        padding-bottom: 18px;
     }
     &__subtitle {
-        margin: 18px 26px 27px 34px;
+        font-size: 1.125em;
+        font-weight: 300;
+        margin: 0px 26px 27px 34px;
     }
     &__btn {
         margin: 0 75px 57px 82px;
