--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,15 +1,20 @@
+@use '../util/' as u;
+
 .header {
+    background-color: var(--white);
     width: 100%;
     &__logo {
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 63px;
+        height: u.rem(63);
     }
     &__location { 
-        height: 50px;
+        background-color: var(--background-grey-light);
+        height: u.rem(50);
         display: flex;
         justify-content: center;
         align-items: center;
+        box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.15) inset;
     }
 }
