--- a/scss/layout/_reservez.scss
+++ b/scss/layout/_reservez.scss
@@ -1,15 +1,17 @@
+@use '../util/' as u;
+
 .reservez {
     text-align: center;
+    width: 100%;
     &__title {
-        margin: 39.5px 58px 0 42px;
-        padding-bottom: 18px;
+        margin: u.rem(39.5) u.rem(58) 0 u.rem(42);
     }
     &__subtitle {
-        font-size: 1.125em;
         font-weight: 300;
-        margin: 0px 26px 27px 34px;
+        font-size: u.rem(18);
+        margin: u.rem(18) u.rem(26) u.rem(27) u.rem(34);
     }
     &__btn {
-        margin: 0 75px 57px 82px;
+        margin: 0 u.rem(75) u.rem(57) u.rem(82);
     }
 }
