--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,18 +12,11 @@ body {
   background-color: var(--background-color);
   font-family: "Roboto", sans-serif;
   font-weight: 500;
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
-  min-width: 375px;
-  max-width: 768px;
+  min-width: 23.4375rem;
 }
 
-/* .main-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-} */
 h1, h2, h3, h4, p, ul, li {
   margin: 0;
   padding: 0;
@@ -37,10 +30,6 @@ li {
   font-weight: 400;
 }
 
-li a {
-  color: var(--white-color);
-}
-
 h1, h4 {
   font-family: "Shrikhand", cursive;
   font-weight: 400;
@@ -51,42 +40,35 @@ h1 {
 }
 
 :root {
-  --background-color: #F6F6F6;
-  --location-light-grey: #EAEAEA;
-  --footer-grey-color: #353535;
-}
-
-header, .fonctionnement {
-  background-color: var(--white-color);
-}
-
-.header__location {
-  background-color: var(--location-light-grey);
-  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15) inset;
-}
-
-footer {
-  background-color: var(--footer-grey-color);
-  color: var(--white-color);
+  --black: #000000;
+  --white: #FFFFFF;
+  --background-color: #F7F7F7;
+  --background-grey-light: #EAEAEA;
+  --background-grey-dark: #353535;
+  --btn-purple-dark: #9356DC;
+  --btn-purple-light: #FF79DA;
+  --btn-icone-grey: #7E7E7E;
+  --btn-green-light: #99E2D0;
+  --btn-green-dark: #008766;
 }
 
 .reservez__btn {
   display: inline-block;
-  background: linear-gradient(193.33deg, #FF79DA -11.44%, #9356DC 123.93%);
-  color: #FFFFFF;
-  padding: 0.81em;
-  width: 13.6em;
+  background: linear-gradient(193.33deg, var(--btn-purple-light) -11.44%, var(--btn-purple-dark) 123.93%);
+  color: var(--white);
+  padding: 0.8125rem;
+  width: 13.625rem;
   text-align: center;
-  box-shadow: 0px 0.25em 0.62em 0px rgba(0, 0, 0, 0.25);
-  border-radius: 1.56em;
+  box-shadow: 0 0.25rem 0.625rem 0 rgba(0, 0, 0, 0.25);
+  border-radius: 1.5625rem;
   transition-property: transform;
   transition: transform 500ms ease-in-out;
 }
 .reservez__btn:hover {
   transform: scale(1.15);
-  background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-  border-radius: 25px;
+  background: linear-gradient(193.33deg, var(--btn-purple-dark) -11.44%, var(--btn-purple-light) 123.93%);
+  box-shadow: 0 0.25rem 0.625rem 0 rgba(0, 0, 0, 0.25);
+  border-radius: 1.5625rem;
   transform: matrix(1, 0, 0, -1, 0, 0);
 }
 
@@ -95,10 +77,10 @@ footer {
   align-items: center;
   position: relative;
   background-color: var(--background-color);
-  width: 322.49px;
-  height: 72.38px;
-  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
-  border-radius: 20px;
+  width: 20.155625rem;
+  height: 4.52375rem;
+  box-shadow: 0 0.25rem 0.9375rem 0 rgba(0, 0, 0, 0.15);
+  border-radius: 1.25rem;
   transition-property: transform;
   transition: transform 500ms ease-in-out;
 }
@@ -106,39 +88,39 @@ footer {
   transform: scale(1.15);
 }
 .fonctionnement__btn__numberBox {
-  background-color: #9356DC;
+  background-color: var(--btn-purple-dark);
   position: absolute;
-  left: -12px;
-  height: 24px;
-  width: 24px;
-  border-radius: 12px;
+  left: -0.75rem;
+  height: 1.5rem;
+  width: 1.5rem;
+  border-radius: 0.75rem;
 }
 .fonctionnement__btn__numberBox--number {
-  font-size: 0.886em;
-  color: #FFFFFF;
+  font-size: 0.88625rem; /* 0.886em */
+  color: var(--white);
   position: absolute;
-  top: 5.09px;
-  left: 8px;
+  top: 0.318125rem;
+  left: 0.5rem;
 }
 .fonctionnement__btn__logo {
-  color: #7E7E7E;
+  color: var(--btn-icone-grey);
   position: absolute;
-  left: 33.5px;
+  left: 2.09375rem;
 }
 .fonctionnement__btn__text {
-  margin-left: 74px;
+  margin-left: 4.625rem;
 }
 .fonctionnement__btn .fa-store {
-  color: #9356DC;
+  color: var(--btn-purple-dark);
 }
 
 .card {
-  background-color: #FFF;
-  color: #000;
+  background-color: var(--background-color);
+  color: var(--black);
   position: relative;
   overflow: hidden;
-  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1);
-  border-radius: 15px;
+  box-shadow: 0 0.25rem 0.9375rem 0 rgba(0, 0, 0, 0.1);
+  border-radius: 0.9375rem;
   transition-property: transform;
   transition: transform 500ms ease-in-out;
 }
@@ -147,94 +129,98 @@ footer {
 }
 .card__img {
   object-fit: cover;
-  width: 346px;
-  height: 231px;
-  margin: -57px -3px -4px -3px;
+  width: 21.625rem;
+  height: 14.4375rem;
+  margin: -3.5625rem -0.1875rem -0.25rem -0.1875rem;
 }
 .card__nouveau {
-  font-size: 0.875em;
-  background-color: #99E2D0;
-  color: #008766;
+  font-size: 0.875rem;
+  background-color: var(--btn-green-light);
+  color: var(--btn-green-dark);
   display: flex;
   justify-content: center;
   align-items: center;
   position: absolute;
-  width: 80px;
-  height: 29px;
-  top: 13px;
-  left: 251px;
-  border-radius: 2px;
+  width: 5rem;
+  height: 1.8125rem;
+  top: 0.8125rem;
+  left: 15.6875rem;
+  border-radius: 0.125rem;
 }
 .card__title {
-  font-size: 1.125em;
-  margin: 16px 60px 5px 13px;
+  font-size: 1.125rem;
+  margin: 1rem 3.75rem 0.3125rem 0.8125rem;
 }
 .card__subtitle {
-  font-size: 1.063em;
+  font-size: 1.0625rem;
   font-weight: 300;
-  height: 24px;
-  margin: 0 80px 12px 13px;
+  height: 1.5rem;
+  margin: 0 5rem 0.75rem 0.8125rem;
 }
 .card__icon {
   display: flex;
   align-items: center;
   position: absolute;
-  width: 22px;
-  height: 21px;
-  bottom: 33px;
-  right: 25px;
+  width: 1.375rem;
+  height: 1.3125rem;
+  bottom: 2.0625rem;
+  right: 1.5625rem;
 }
 
 .header {
+  background-color: var(--white);
   width: 100%;
 }
 .header__logo {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 63px;
+  height: 3.9375rem;
 }
 .header__location {
-  height: 50px;
+  background-color: var(--background-grey-light);
+  height: 3.125rem;
   display: flex;
   justify-content: center;
   align-items: center;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.15) inset;
 }
 
 .reservez {
   text-align: center;
+  width: 100%;
 }
 .reservez__title {
-  margin: 39.5px 58px 0 42px;
-  padding-bottom: 18px;
+  margin: 2.46875rem 3.625rem 0 2.625rem;
 }
 .reservez__subtitle {
-  font-size: 1.125em;
   font-weight: 300;
-  margin: 0px 26px 27px 34px;
+  font-size: 1.125rem;
+  margin: 1.125rem 1.625rem 1.6875rem 2.125rem;
 }
 .reservez__btn {
-  margin: 0 75px 57px 82px;
+  margin: 0 4.6875rem 3.5625rem 5.125rem;
 }
 
 .fonctionnement {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: var(--white);
 }
 .fonctionnement__wrap {
-  width: 375px;
-  height: 440px;
+  width: 23.4375rem;
+  height: 27.5rem;
 }
 .fonctionnement__wrap--title {
-  margin: 48px 80px 26px 20px;
+  margin: 3rem 5rem 1.625rem 1.25rem;
 }
 .fonctionnement__wrap--box {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 25px;
-  margin-left: 12px;
+  gap: 1.5625rem;
+  margin-left: 0.75rem;
 }
 
 .restaurants {
@@ -243,34 +229,39 @@ footer {
   align-items: center;
 }
 .restaurants__wrap {
-  width: 375px;
-  margin-bottom: 66px;
+  width: 23.4375rem;
+  margin-bottom: 4.125rem;
 }
 .restaurants__title {
-  margin: 54px 80px 28px 20px;
+  margin: 3.375rem 5rem 1.75rem 1.25rem;
 }
 .restaurants__wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 18px;
+  gap: 1.125rem;
 }
 
 .footer {
+  background-color: var(--background-grey-dark);
+  color: var(--white);
   display: flex;
   flex-direction: column;
-  padding: 22px 25px;
-  gap: 16px;
+  padding: 1.375rem 1.5625rem;
+  gap: 1rem;
 }
 .footer__list {
   display: flex;
   flex-direction: column;
-  gap: 7px;
+  gap: 0.4375rem;
 }
 .footer__list--item {
   display: flex;
   align-items: center;
   list-style: none;
+}
+.footer__list a {
+  color: var(--white);
 }
 .footer__list .strong {
   font-weight: 500;
@@ -279,5 +270,5 @@ footer {
 .banner img {
   margin: auto;
   object-fit: contain;
-  height: 275px;
+  height: 17.1875rem;
 }
