--- a/scss/base/_boilerplate.scss
+++ b/scss/base/_boilerplate.scss
@@ -14,16 +14,7 @@ body  {
     background-color: var(--background-color);
     font-family: u.$font-roboto;
     font-weight: 500;
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
-    min-width: 375px;
-    max-width: 768px;
-    
+    min-width: u.rem(375);   
 }
-
-/* .main-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-} */
