--- a/scss/layout/_restaurants.scss
+++ b/scss/layout/_restaurants.scss
@@ -1,18 +1,20 @@
+@use '../util/' as u;
+
 .restaurants {
     display: flex;
     flex-direction: column;
     align-items: center;
     &__wrap {
-        width: 375px;
-        margin-bottom: 66px;
+        width: u.rem(375);
+        margin-bottom: u.rem(66);
     }
     &__title {
-       margin: 54px 80px 28px 20px;
+       margin: u.rem(54) u.rem(80) u.rem(28) u.rem(20);
     }
     &__wrapper {
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 18px;
+        gap: u.rem(18);
     }
 }
