--- a/scss/util/_breakpoints.scss
+++ b/scss/util/_breakpoints.scss
@@ -1,12 +1,28 @@
+@use 'functions' as f;
+
 // 375px, 1024px, 1440px
 $breakpoints-up: (
-    'medium': 23.437em,
-    'large': 64em,
-    'xlarge': 90em,
+    'medium': f.rem(375),
+    'large': f.rem(1024),
+    'xlarge': f.rem(1440),
+);
+
+
+// 374.98px, 1023.98px, 1439.98px
+$breakpoints-down: (
+    'small': f.rem(374.98),
+    'medium': f.rem(1023.98),
+    'large': f.rem(1439.98),
 );
 
 @mixin breakpoint($size) {
     @media (min-width: map-get($breakpoints-up, $size)) {
         @content;
     }
+}
+
+@mixin breakpoint-down($size) {
+	@media (max-width: map-get($breakpoints-down, $size)) {
+		@content;
+	}
 }
