--- a/scss/util/_functions.scss
+++ b/scss/util/_functions.scss
@@ -1,17 +1,19 @@
+@use 'sass:math';
+
 @function rem($pixel) {
     @if math.is-unitless($pixel) {
         @return math.div($pixel, 16) + rem;
     }
     @else {
-        @error 'Utilise que des chifres pour la fonction rem()!' 
+        @error 'Utilise que des chifres pour la fonction rem() andouille!' 
     }
-}
+};
 
 @function em($pixel) {
     @if math.is-unitless($pixel) {
         @return math.div($pixel, 16) + em;
     }
     @else {
-        @error 'Utilise que des chifres pour la fonction em()!' 
+        @error 'Utilise que des chifres pour la fonction em() andouille!' 
     }
 }
