integration des animations avec keyframes

--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -6,10 +6,10 @@
     position: relative;
     overflow: hidden;
     @include u.shadow(u.rem(4), u.rem(15), 0.1, u.rem(15));
-    transition-property: transform;
-    transition: transform 500ms ease-in-out;
+    transition: all 500ms ease-in-out;
     &:hover {
-        transform: scale(1.10);
+        transform: translateY(-1rem);
+        box-shadow: 2px 3px 18px var(--btn-purple-dark);
     }
     &__img {
         object-fit: cover;
