--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,47 @@
+.restaurants__wrapper {
+  animation-duration: 3s;
+  animation-name: slidein;
+}
+
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
+.fonctionnement__btn {
+  animation: grow-and-shrink 2000ms;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+@keyframes grow-and-shrink {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.2);
+  }
+}
+.reservez__btn {
+  animation: drop-in 1000ms;
+}
+
+@keyframes drop-in {
+  from {
+    transform: rotate(-180deg) translateY(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: rotate(0deg) translateY(0%);
+    opacity: 1;
+  }
+}
 html {
   box-sizing: border-box;
   font-size: 100%;
@@ -121,11 +165,11 @@ h1 {
   overflow: hidden;
   box-shadow: 0 0.25rem 0.9375rem 0 rgba(0, 0, 0, 0.1);
   border-radius: 0.9375rem;
-  transition-property: transform;
-  transition: transform 500ms ease-in-out;
+  transition: all 500ms ease-in-out;
 }
 .card:hover {
-  transform: scale(1.1);
+  transform: translateY(-1rem);
+  box-shadow: 2px 3px 18px var(--btn-purple-dark);
 }
 .card__img {
   object-fit: cover;
