--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,7 +5,7 @@
 
 @keyframes slidein {
   from {
-    margin-left: 100%;
+    margin-left: 50%;
     width: 300%;
   }
   to {
@@ -17,7 +17,7 @@
   animation: grow-and-shrink 2000ms;
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
-  animation-direction: alternate;
+  animation-direction: alternate-reverse;
 }
 
 @keyframes grow-and-shrink {
@@ -125,11 +125,6 @@ h1 {
   height: 4.52375rem;
   box-shadow: 0 0.25rem 0.9375rem 0 rgba(0, 0, 0, 0.15);
   border-radius: 1.25rem;
-  transition-property: transform;
-  transition: transform 500ms ease-in-out;
-}
-.fonctionnement__btn:hover {
-  transform: scale(1.15);
 }
 .fonctionnement__btn__numberBox {
   background-color: var(--btn-purple-dark);
@@ -140,7 +135,7 @@ h1 {
   border-radius: 0.75rem;
 }
 .fonctionnement__btn__numberBox--number {
-  font-size: 0.88625rem; /* 0.886em */
+  font-size: 0.88625rem;
   color: var(--white);
   position: absolute;
   top: 0.318125rem;
@@ -168,8 +163,8 @@ h1 {
   transition: all 500ms ease-in-out;
 }
 .card:hover {
-  transform: translateY(-1rem);
-  box-shadow: 2px 3px 18px var(--btn-purple-dark);
+  transform: translateY(-0.8rem);
+  box-shadow: 2px 3px 18px var(--btn-green-dark);
 }
 .card__img {
   object-fit: cover;
