--- a/scss/util/_keyframes.scss
+++ b/scss/util/_keyframes.scss
@@ -5,7 +5,7 @@
   
   @keyframes slidein {
     from {
-      margin-left:100%;
+      margin-left:50%;
       width:300%
     }
   
@@ -19,7 +19,7 @@
     animation: grow-and-shrink 2000ms;
     animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
-    animation-direction: alternate;
+    animation-direction: alternate-reverse;
   }
 
   @keyframes grow-and-shrink {
