--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,17 @@
-.restaurants__wrapper {
-  animation-duration: 3s;
-  animation-name: slidein;
+:root {
+  --black: #000000;
+  --white: #FFFFFF;
+  --background-color: #F7F7F7;
+  --background-grey-light: #EAEAEA;
+  --background-grey-dark: #353535;
+  --btn-purple-dark: #9356DC;
+  --btn-purple-light: #FF79DA;
+  --btn-icone-grey: #7E7E7E;
+  --btn-green-light: #99E2D0;
+  --btn-green-dark: #008766;
 }
 
+/* breakpoints small:375px, medium:700px, large:900px, xlarge:1440px */
 @keyframes slidein {
   from {
     margin-left: 50%;
@@ -13,25 +22,6 @@
     width: 100%;
   }
 }
-.fonctionnement__btn {
-  animation: grow-and-shrink 2000ms;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: infinite;
-  animation-direction: alternate-reverse;
-}
-
-@keyframes grow-and-shrink {
-  0% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(1.2);
-  }
-}
-.reservez__btn {
-  animation: drop-in 1000ms;
-}
-
 @keyframes drop-in {
   from {
     transform: rotate(-180deg) translateY(-100%);
@@ -56,9 +46,10 @@ body {
   background-color: var(--background-color);
   font-family: "Roboto", sans-serif;
   font-weight: 500;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   min-width: 23.4375rem;
+  max-width: 90rem;
 }
 
 h1, h2, h3, h4, p, ul, li {
@@ -74,39 +65,167 @@ li {
   font-weight: 400;
 }
 
-h1, h4 {
+h4 {
   font-family: "Shrikhand", cursive;
   font-weight: 400;
 }
 
-h1 {
-  font-size: 1.875em;
+.header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--white);
+  width: 100%;
+  height: 3.9375rem;
+}
+@media (min-width: 48em) {
+  .header {
+    height: 6em;
+  }
+}
+.header__logo {
+  width: 10.125rem;
+  height: 2.75rem;
+}
+@media (min-width: 48em) {
+  .header__logo {
+    width: 12.5rem;
+  }
+}
+.header__location {
+  background-color: var(--background-grey-light);
+  height: 3.125rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.15) inset;
+}
+@media (min-width: 48em) {
+  .header__location {
+    box-shadow: none;
+  }
 }
 
-:root {
-  --black: #000000;
-  --white: #FFFFFF;
-  --background-color: #F7F7F7;
-  --background-grey-light: #EAEAEA;
-  --background-grey-dark: #353535;
-  --btn-purple-dark: #9356DC;
-  --btn-purple-light: #FF79DA;
-  --btn-icone-grey: #7E7E7E;
-  --btn-green-light: #99E2D0;
-  --btn-green-dark: #008766;
+.reservez {
+  text-align: center;
+}
+.reservez__title {
+  margin: 2.46875rem 3.625rem 0 2.625rem;
+  padding-bottom: 1.125rem;
+}
+@media (min-width: 48em) {
+  .reservez__title {
+    margin: 1.875rem 0rem 0 0rem;
+    font-size: 2.5rem;
+  }
+}
+.reservez__subtitle {
+  font-weight: 300;
+  font-size: 1.125rem;
+  margin: 0 1.625rem 1.6875rem 2.125rem;
+}
+@media (min-width: 48em) {
+  .reservez__subtitle {
+    margin: 0 0rem 1.125rem 0rem;
+  }
+}
+.reservez__btn {
+  margin-bottom: 3.5625rem;
+}
+@media (min-width: 48em) {
+  .reservez__btn {
+    margin-bottom: 2.6875rem;
+  }
+}
+
+.fonctionnement {
+  background-color: var(--white);
+  padding: 3rem 1.25rem;
+}
+.fonctionnement__title {
+  padding-bottom: 0.375rem;
+}
+@media (min-width: 64em) {
+  .fonctionnement__title {
+    padding-left: 11.25rem;
+  }
+}
+.fonctionnement__wrap {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 25px;
+  padding: 1.25rem 0;
+}
+.fonctionnement__btn {
+  margin-left: 0.75rem;
+  width: 30%;
+}
+
+.test {
+  display: flex;
+  justify-content: center;
+}
+
+.restaurants {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.restaurants__wrap {
+  width: 23.4375rem;
+  margin-bottom: 4.125rem;
+}
+.restaurants__title {
+  margin: 3.375rem 5rem 1.75rem 1.25rem;
+}
+.restaurants__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.125rem;
+  animation-duration: 3s;
+  animation-name: slidein;
+}
+
+.footer {
+  background-color: var(--background-grey-dark);
+  color: var(--white);
+  display: flex;
+  flex-direction: column;
+  padding: 1.375rem 1.5625rem;
+  gap: 1rem;
+}
+.footer__list {
+  display: flex;
+  flex-direction: column;
+  gap: 0.4375rem;
+}
+.footer__list--item {
+  display: flex;
+  align-items: center;
+  list-style: none;
+}
+.footer__list a {
+  color: var(--white);
+}
+.footer__list .strong {
+  font-weight: 500;
 }
 
 .reservez__btn {
   display: inline-block;
   background: linear-gradient(193.33deg, var(--btn-purple-light) -11.44%, var(--btn-purple-dark) 123.93%);
   color: var(--white);
-  padding: 0.8125rem;
-  width: 13.625rem;
+  padding: 0.8125rem 1.171875rem;
   text-align: center;
   box-shadow: 0 0.25rem 0.625rem 0 rgba(0, 0, 0, 0.25);
   border-radius: 1.5625rem;
   transition-property: transform;
   transition: transform 500ms ease-in-out;
+  animation: drop-in 1000ms;
 }
 .reservez__btn:hover {
   transform: scale(1.15);
@@ -121,7 +240,7 @@ h1 {
   align-items: center;
   position: relative;
   background-color: var(--background-color);
-  width: 20.155625rem;
+  width: 18.4375rem;
   height: 4.52375rem;
   box-shadow: 0 0.25rem 0.9375rem 0 rgba(0, 0, 0, 0.15);
   border-radius: 1.25rem;
@@ -138,6 +257,8 @@ h1 {
   font-size: 0.88625rem;
   color: var(--white);
   position: absolute;
+  width: 0.954375rem;
+  height: 0.909375rem;
   top: 0.318125rem;
   left: 0.5rem;
 }
@@ -148,6 +269,7 @@ h1 {
 }
 .fonctionnement__btn__text {
   margin-left: 4.625rem;
+  margin-right: 2.375rem;
 }
 .fonctionnement__btn .fa-store {
   color: var(--btn-purple-dark);
@@ -206,108 +328,15 @@ h1 {
   right: 1.5625rem;
 }
 
-.header {
-  background-color: var(--white);
-  width: 100%;
-}
-.header__logo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 3.9375rem;
-}
-.header__location {
-  background-color: var(--background-grey-light);
-  height: 3.125rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.15) inset;
+#clock-gradient {
+  opacity: 1;
+  display: inline-block;
+  -webkit-transition: opacity 0.4s ease;
+  -moz-transition: opacity 0.4s ease;
+  -o-transition: opacity 0.4s ease;
+  transition: opacity 0.4s ease;
 }
 
-.reservez {
-  text-align: center;
-  width: 100%;
-}
-.reservez__title {
-  margin: 2.46875rem 3.625rem 0 2.625rem;
-}
-.reservez__subtitle {
-  font-weight: 300;
-  font-size: 1.125rem;
-  margin: 1.125rem 1.625rem 1.6875rem 2.125rem;
-}
-.reservez__btn {
-  margin: 0 4.6875rem 3.5625rem 5.125rem;
-}
-
-.fonctionnement {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: var(--white);
-}
-.fonctionnement__wrap {
-  width: 23.4375rem;
-  height: 27.5rem;
-}
-.fonctionnement__wrap--title {
-  margin: 3rem 5rem 1.625rem 1.25rem;
-}
-.fonctionnement__wrap--box {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1.5625rem;
-  margin-left: 0.75rem;
-}
-
-.restaurants {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.restaurants__wrap {
-  width: 23.4375rem;
-  margin-bottom: 4.125rem;
-}
-.restaurants__title {
-  margin: 3.375rem 5rem 1.75rem 1.25rem;
-}
-.restaurants__wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1.125rem;
-}
-
-.footer {
-  background-color: var(--background-grey-dark);
-  color: var(--white);
-  display: flex;
-  flex-direction: column;
-  padding: 1.375rem 1.5625rem;
-  gap: 1rem;
-}
-.footer__list {
-  display: flex;
-  flex-direction: column;
-  gap: 0.4375rem;
-}
-.footer__list--item {
-  display: flex;
-  align-items: center;
-  list-style: none;
-}
-.footer__list a {
-  color: var(--white);
-}
-.footer__list .strong {
-  font-weight: 500;
-}
-
-.banner img {
-  margin: auto;
-  object-fit: contain;
-  height: 17.1875rem;
+#clock-gradient:hover {
+  opacity: 1;
 }
