--- a/scss/base/_boilerplate.scss
+++ b/scss/base/_boilerplate.scss
@@ -14,7 +14,8 @@ body  {
     background-color: var(--background-color);
     font-family: u.$font-roboto;
     font-weight: 500;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
-    min-width: u.rem(375);   
+    min-width: u.rem(375); 
+    max-width: u.rem(1440); 
 }
