--- a/scss/layout/_restaurants.scss
+++ b/scss/layout/_restaurants.scss
@@ -16,5 +16,7 @@
         flex-direction: column;
         align-items: center;
         gap: u.rem(18);
+        animation-duration: 3s;
+        animation-name: slidein;
     }
 }
