--- a/scss/base/_boilerplate.scss
+++ b/scss/base/_boilerplate.scss
@@ -19,3 +19,11 @@ body  {
     min-width: u.rem(375); 
     max-width: u.rem(1440); 
 }
+
+.container {
+    width: calc(100% - u.rem(40));
+    max-width: u.rem(1000);
+    margin-left: auto;
+    margin-right: auto;
+    padding: u.rem(48) 0;
+}
